--- a/application.yml
+++ b/application.yml
@@ -1,14 +1,14 @@
-﻿spring:
+spring:
   profiles:
-  active:
-  - dev
+    active:
+    - dev
 ---
 spring:
   profiles: dev
   application:
-    name: microservicecloud-pancoit-config
+    name: microservicecloud-config-dev
 ---
 spring:
   profiles: test
   application:
-    name: microservicecloud-pancoit-config
+    name: microservicecloud-config-test
